css style and divs added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vitor S</title>
+  <link rel="stylesheet" href="css\style.css">
+  <title>Vitor S.</title>
 </head>
 <body>
-  <h1>I'm Vitor</h1>
-  <p>and that's a paragraph</p>
+  <div class="top-container">
+    <h1>I'm Vitor</h1>
+    <p>and that's a paragraph</p>
+  </div>
+  <div class="middle-container"></div>
+  <div class="bottom-container"></div>
 </body>
 </html>
