--- a/Bootstrap/TinDog-Start/index.html
+++ b/Bootstrap/TinDog-Start/index.html
@@ -57,7 +57,7 @@
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6"> 
+        <div class="col-lg-6 position-relative"> 
           <img class= "title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
