--- a/Bootstrap/TinDog-Start/index.html
+++ b/Bootstrap/TinDog-Start/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     
     <div class="container-fluid">
 
@@ -67,7 +67,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="container-fluid">
       <div class="row">
         
@@ -97,7 +97,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -127,7 +127,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -138,7 +138,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -197,7 +197,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section"id="cta">
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button class="btn btn-lg btn-dark download-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
@@ -208,7 +208,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
       <i class="social-icon fa-brands fa-facebook"></i>
       <i class="social-icon fa-brands fa-twitter"></i>
