--- a/Simon Game Challenge/index.html
+++ b/Simon Game Challenge/index.html
@@ -36,6 +36,8 @@
   </div>
 
 
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+<script src="game.js"></script>
 </body>
 
 </html>
